add process monitoring(sensu check and collectd plugin)

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -22,6 +22,8 @@ suites:
   - recipe[ktc-testing]
   - recipe[ktc-etcd]
   - recipe[ktc-sensu::master]
+  - recipe[sensu::default]
+  - recipe[collectd::client]
   - recipe[ktc-base]
   attributes: 
     authorization:
